tests/ui/generic-consts/feature-gate-generic_consts.stderr
error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:2:14
   |
LL |     const ONE<T>: i32;
   |              ^^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:6:5
   |
LL | /     where
LL | |         A: Copy;
   | |_______________^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:11:12
   |
LL | const CONST<T>: i32 = 0;
   |            ^^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:14:12
   |
LL | const EMPTY<>: i32 = 0;
   |            ^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:18:1
   |
LL | / where
LL | |     String: Clone;
   | |_________________^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:28:22
   |
LL | discard! { const FREE<T>: () = (); }
   |                      ^^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:31:33
   |
LL | discard! { impl () { const ASSOC<const N: ()>: () = (); } }
   |                                 ^^^^^^^^^^^^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error[E0658]: generic consts are experimental
  --> $DIR/feature-gate-generic_consts.rs:34:43
   |
LL | discard! { impl () { const ASSOC: i32 = 0 where String: Copy; } }
   |                                           ^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #4294967295 <https://github.com/rust-lang/rust/issues/4294967295> for more information
   = help: add `#![feature(generic_consts)]` to the crate attributes to enable

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0658`.
